# fizzflash

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: ai_flashcards.py  flashcards.py  health.py  skills.py  study.py  subdomains.py
backend/app/core/: cache.py  rate_limiter.py  redis.py
backend/app/db/: init.py  models.py  session.py
backend/app/repositories/: flashcard_repository.py  skill_repository.py  subdomain_repository.py
backend/app/schemas/: skill.py
backend/app/services/: ai_service.py  flashcard_service.py  health_service.py  skill_service.py  study_service.py  subdomain_service.py
backend/app/utils/: stats.py
backend/docker/postgres/: docker-compose.yml
frontend/: package-lock.json  package.json
